# sharet-backend

./: Procfile  README.md  alembic.ini  main.py  model.py  pyproject.toml  requirements.txt  shared_resource_api.py
alembic/: README
alembic/versions/: 168222f1c61a_added_account_table.py  296dd4f08eeb_added_account_table.py  348968e8cc39_added_account_table.py  488177710689_added_account_table.py  5c36684ceff0_added_account_table.py  74a29d8315ba_added_account_table.py  a6f30558522c_added_account_table.py  aacc6f926795_added_account_table.py  b1a81dd290b6_added_account_table.py  f1313d5c7584_added_account_table.py
app/: main.py
app/crud/: __init__.py  base.py  crud_reservation.py  crud_user.py  crud_user_and_resource.py
app/db/: base.py  session.py
app/models/: models.py  reservation.py  resource.py  user.py  user_and_resource.py
app/schemas/: __init__.py  reservation.py  resource.py  user.py  user_and_resource.py
db/: base.py  session.py
