[tool.poetry]
name = "sharet"
version = "0.1.0"
description = "Backend part of ShareT application"
authors = ["ai18 <antonio.ionta.18@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
